--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,34 +21,97 @@
   </head>
 
   <body class="container">
+    <div class="card panels-card">
+      <div class="rounded-top grey lighten-2 dark-grey-text">
+        <ul class="list-inline float-right my-0 py-1 pr-3">
+          <li class="list-inline-item">
+            <i class="fab fa-facebook" aria-hidden="true"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-twitter" aria-hidden="true"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+          </li>
+        </ul>
+      </div>
 
+      <!--Navbar-->
+      <nav
+        class="navbar navbar-expand-lg navbar-dark grey lighten-5 d-flex justify-content-between z-depth-1-bottom"
+      >
+        <div>
+          <ul class="list-inline my-2 py-1 dark-grey-text">
+            <li class="list-inline-item">
+              <i class="fas fa-bars" aria-hidden="true"></i>
+            </li>
+            <li class="list-inline-item font-weight-bold text-uppercase">
+              Developing
+            </li>
+          </ul>
+        </div>
 
-    <!--Card-->
-<div class="card m-5" style="width: 22rem;">
+        <div>
+          <ul class="list-inline my-2 py-1 dark-grey-text">
+            <li class="list-inline-item">
+              <i class="fas fa-search" aria-hidden="true"></i>
+              <i class="fas fa-ellipsis-v pl-3" aria-hidden="true"></i>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <!--/.Navbar-->
 
-    <!--Card image-->
-    <div class="view overlay">
-      <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%287%29.jpg" class="img-fluid" alt="">
-      <a href="#">
-        <div class="mask rgba-white-slight"></div>
-      </a>
+      <div class="card-body grey lighten-5 rounded-bottom">
+        <!-- Grid row -->
+        <div class="row">
+          <!-- Grid column -->
+          <% knowledges.forEach(function(knowledge) { %>
+          <div class="col-12 p-1">
+            <!-- Rotating card -->
+            <div class="card-wrapper card-action">
+              <div id="card-<%= knowledge.id%>" class="card card-rotating text-center">
+                <!-- Front Side -->
+                <div class="face front">
+                  <!-- Content -->
+                  <div class="card-body">
+                    <p class="font-weight-bold text-uppercase pink-text mb-3">
+                      <%= knowledge.process%>
+                    </p>
+                    <h3 class="font-weight-bold mb-3 pb-1"><%= knowledge.zh_sub_process%></h3>
+                    <!-- Triggering button -->
+                    <a
+                      class="rotate-btn btn-floating btn-pink"
+                      data-card="card-<%= knowledge.id%>"
+                      ><i class="fas fa-redo-alt"></i> Click here to rotate</a
+                    >
+                  </div>
+                </div>
+                <!-- Front Side -->
+
+                <!-- Back Side -->
+                <div class="face back">
+                  <div class="card-body">
+                    <!-- Content -->
+                    <h4 class="font-weight-bold">Answer</h4>
+                    <hr />
+                    <p>
+                        <%= knowledge.sentence%>
+                    </p>
+                    <hr />
+                    <a class="rotate-btn" data-card="card-<%= knowledge.id%>"><i class="fas fa-undo"></i> Click here to rotate back</a>
+                  </div>
+                </div>
+                <!-- Back Side -->
+              </div>
+            </div>
+            <!-- Rotating card -->
+          </div>
+          <!-- Grid column -->
+          <% }) %>
+
+      </div>
     </div>
-  
-    <!--Card content-->
-    <div class="card-body">
-      <!--Title-->
-      <h4 class="card-title">Card title</h4>
-      <!--Text-->
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-        content.</p>
-      <a href="#" class="btn btn-primary">Button</a>
-    </div>
-  
-  </div>
-  <!--/.Card-->
-
-
-
 
     <!-- JQuery -->
     <script type="text/javascript" src="/js/jquery-3.4.1.min.js"></script>
@@ -58,8 +121,25 @@
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="/js/mdb.min.js"></script>
+    <!-- <script src="/lib/underscore-1.4.4.min.js"></script>
     <script src="/lib/angular/angular.js"></script>
     <script src="/lib/angular/angular-resource.js"></script>
-    <script src="/lib/angular/angular-route.js"></script>
+    <script src="/lib/angular/angular-route.js"></script> -->
+    <!-- <script>
+      let app = angular.module("MyPMP", ['ngResource']);
+
+      app.controller("KnowledgeController", function($scope, data) {
+        $scope.knowledges = data.getAllEvents();
+      });
+
+      app.factory("data", function($resource) {
+        let resource = $resource("/getAllData");
+        return {
+          getAllEvents: function() {
+            return resource.query();
+          }
+        };
+      });
+    </script> -->
   </body>
 </html>
