--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,6 +79,10 @@
                       <%= knowledge.process%>
                     </p>
                     <h3 class="font-weight-bold mb-3 pb-1"><%= knowledge.zh_sub_process%></h3>
+                    <hr />
+                    <p>
+                      <%= knowledge.sentence%>
+                  </p>
                     <!-- Triggering button -->
                     <a
                       class="rotate-btn btn-floating btn-pink"
@@ -91,13 +95,46 @@
 
                 <!-- Back Side -->
                 <div class="face back">
-                  <div class="card-body">
+                  <div class="card-body"  align="left">
                     <!-- Content -->
-                    <h4 class="font-weight-bold">Answer</h4>
+                    <h4 class="font-weight-bold">ITTO</h4>
                     <hr />
-                    <p>
-                        <%= knowledge.sentence%>
-                    </p>
+                    <h6>Input</h6>
+                    <div>
+                      <div class="row">
+                          <%  
+                          if(Object.keys(knowledge.input).length  != 0 )
+                            Object.keys(knowledge.input).forEach(function(key, index) {
+                             %>
+                            <div class="col-md-3 col-6">
+                                <p>
+                                  <a href="#" class="material-tooltip-main" data-toggle="tooltip" title="<%= knowledge.input[key] %>"><%= index+1 %>.<%= key %></a>
+                                </p>
+                            </div>
+                          <% }) %>
+                      </div>
+                     
+                    </div>     
+                    <h6>T&T</h6>
+                    <div class="row">
+                        <%  if(Object.keys(knowledge.techandtool).length   != 0 ) 
+                          Object.keys(knowledge.techandtool).forEach(function(key, index) { %>
+                          <div class="col-md-3 col-6">
+                              <p><a href="#" class="material-tooltip-main" data-toggle="tooltip" title="<%= knowledge.techandtool[key] %>"><%= index+1 %>.<%= key %></a>
+                              </p></div>
+                        <% }) %>
+                    </div>
+                    
+                    <h6>Output</h6>
+                    <div class="row">
+                        <% if(Object.keys(knowledge.output).length != 0 )
+                        Object.keys(knowledge.output).forEach(function(key, index) { %>
+                          <div class="col-md-3 col-6">
+                            <p><a href="#" class="material-tooltip-main" data-toggle="tooltip" title="<%= knowledge.output[key] %>"><%= index+1 %>.<%= key %></a>
+                            </p>                              
+                          </div>
+                        <% }) %>
+                    </div>
                     <hr />
                     <a class="rotate-btn" data-card="card-<%= knowledge.id%>"><i class="fas fa-undo"></i> Click here to rotate back</a>
                   </div>
@@ -121,6 +158,15 @@
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="/js/mdb.min.js"></script>
+
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
+    </script>
+
+
+
     <!-- <script src="/lib/underscore-1.4.4.min.js"></script>
     <script src="/lib/angular/angular.js"></script>
     <script src="/lib/angular/angular-resource.js"></script>
