--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,15 +68,12 @@
 
       gtag("config", "UA-147053694-1");
     </script>
-    Ｆ
   </head>
 
   <body class="container" ng-controller="KnowledgeController">
     <div class="row">
       <div class="col-auto">
-        <button type="button" class="btn btn-primary" ng-click="shuffle()">
-          下一個
-        </button>
+        <button type="button" class="btn btn-primary" ng-click="shuffle()">下一個</button>
       </div>
     </div>
     <div class="card-body grey lighten-5 rounded-bottom">
