add disabled fuinction

--- a/views/five_question.ejs
+++ b/views/five_question.ejs
@@ -116,6 +116,8 @@
                   $(this).parent('div').addClass('checkbox-correct-filled');
                 }
               }
+              
+              this.disabled = true;
             })
             showResult (selected_ans, wrong_ans, ans)
         })
