--- a/views/five_question.ejs
+++ b/views/five_question.ejs
@@ -55,6 +55,29 @@
       border-color: #FAA381;
       background-color: #FAA381;
     }
+
+    @media (max-width:768px){
+      .container, .row{
+        width: 100%;
+        max-width: 100%;
+        padding: 0;
+        margin: 0;
+      }
+
+      .row .col{
+        padding: 0;
+        margin: 0;
+      }
+
+      .card {
+        height: 100vh;
+      }
+
+      .question-form{
+        max-width: 300px;
+        width: 300px;
+      }
+    }
   </style>
 
 </head>
@@ -62,51 +85,102 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="card">
-        <% for(var i = 0; i < question.length; i++){ %>
-        <h5 class="card-header info-color white-text text-center py-4">
-          <strong><%= question[i].id %>、<%= question[i].question %></strong>
-        </h5>
+      <div class="col">
+        <div class="card" style="height: 100vh;">
+          <% for(var i = 0; i < question.length; i++){ %>
+          <h5 class="card-header info-color white-text text-center py-4">
+            <strong><%= question[i].question %></strong>
+          </h5>
 
-        <!--Card content-->
-        <div class="card-body px-lg-5 pt-0">
-          <div class="question-form">
-            <% for(var j = 0; j < question[i].selections.length; j++) { %>
-            <div class="form-check">
-              <input id="<%= question[i].selections[j].name + j %>" class="form-check-input filled-in" type="checkbox"
-                value="<%= question[i].selections[j].answer %>" name="<%= question[i].id %>">
-              <label class="form-check-label"
-                for="<%= question[i].selections[j].name + j %>"><%= question[i].selections[j].name %></label>
+          <!--Card content-->
+          <div class="card-body px-lg-5 pt-0">
+            <div class="question-form">
+              <% for(var j = 0; j < question[i].selections.length; j++) { %>
+              <div class="form-check">
+                <input id="<%= question[i].selections[j].name + j %>" class="form-check-input filled-in" type="checkbox"
+                  value="<%= question[i].selections[j].answer %>" name="<%= question[i].id %>">
+                <label class="form-check-label"
+                  for="<%= question[i].selections[j].name + j %>"><%= question[i].selections[j].name %></label>
+              </div>
+              <% } %>
             </div>
-            <% } %>
-
-            <% if(i === question.length - 1) { %>
-            <button id="finish" type="button" class="btn btn-success">完成測驗</button>
-            <% } else { %>
-            <button id="continue" type="button" class="btn btn-primary">下一題</button>
-            <% } %>
+            <div class="actions" align="center">
+              <% if(i === question.length - 1) { %>
+                <button id="finish" type="button" class="btn btn-success">完成測驗</button>
+                <% } else { %>
+                <button id="continue" type="button" class="btn btn-primary">下一題</button>
+                <% } %>
+            </div>
           </div>
-        </div>
-        <% } %>
+          <% } %>
 
-        <hr>
-        <div class="form-check checkbox-correct-filled">
-          <input class="form-check-input filled-in" type="checkbox" checked disabled>
-          <label class="form-check-label" for="">正確答案</label>
-        </div>
+          <hr>
+          <div class="form-check checkbox-correct-filled">
+            <input class="form-check-input filled-in" type="checkbox" checked disabled>
+            <label class="form-check-label" for="">正確答案</label>
+          </div>
 
-        <div class="form-check checkbox-wrong-filled">
-          <input class="form-check-input filled-in" type="checkbox"  checked disabled>
-          <label class="form-check-label" for="">選錯的答案</label>
-        </div>
+          <div class="form-check checkbox-wrong-filled">
+            <input class="form-check-input filled-in" type="checkbox" checked disabled>
+            <label class="form-check-label" for="">選錯的答案</label>
+          </div>
 
-        <div class="form-check checkbox-shouldBechecked-filled">
-          <input class="form-check-input filled-in" type="checkbox"  checked disabled>
-          <label class="form-check-label" for="">應選而未選的選項</label>
+          <div class="form-check checkbox-shouldBechecked-filled">
+            <input class="form-check-input filled-in" type="checkbox" checked disabled>
+            <label class="form-check-label" for="">應選而未選的選項</label>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
+  <!-- Central Modal Warning Demo-->
+  <div class="modal fade left" id="ModalWarning" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-notify modal-info modal-side modal-bottom-left" role="document">
+      <!--Content-->
+      <div class="modal-content">
+        <!--Header-->
+        <div class="modal-header">
+          <p class="heading">完成測驗</p>
+
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true" class="white-text">&times;</span>
+          </button>
+        </div>
+
+        <!--Body-->
+        <div class="modal-body">
+
+          <div class="row">
+            <div class="col-3 text-center">
+              <img src="/images/developer.jpg" alt="IMG of Avatars"
+                class="img-fluid z-depth-1-half rounded-circle">
+              <div style="height: 10px"></div>
+              <p class="title mb-0">Kevin</p>
+              <p class="text-muted " style="font-size: 13px">Developer<br/>Consultant</p>
+            </div>
+
+            <div class="col-9">
+              <p>想要儲存紀錄日後複習用嗎？</p>
+              <p class="card-text"><strong>請綁定 Google 帳號或登入留存您的學習紀錄！</strong></p>
+            </div>
+          </div>
+
+
+        </div>
+
+        <!--Footer-->
+        <div class="modal-footer justify-content-center">
+          <a href="/google/auth" type="button" class="btn btn-danger"><i class="fab fa-google"></i>   Google Login</a>
+          <a type="button" class="btn btn-outline-info waves-effect" data-dismiss="modal">No, thanks</a>
+        </div>
+      </div>
+      <!--/.Content-->
+    </div>
+  </div>
+  <!-- Central Modal Warning Demo-->
+
 
   <!-- JQuery -->
   <script type="text/javascript" src="/js/jquery-3.4.1.min.js"></script>
@@ -147,6 +221,8 @@
           this.disabled = true;
         })
         // showResult (selected_ans, wrong_ans, ans)
+        $("#ModalWarning").on('hidden.bs.modal', function () {});
+        $("#ModalWarning").modal('show');
       })
     })
 
